--- a/app/src/main/res/layout/viewholder_wishlist.xml
+++ b/app/src/main/res/layout/viewholder_wishlist.xml
@@ -25,10 +25,11 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="24dp"
+        android:ellipsize="end"
         android:fontFamily="@font/montserrat_medium"
         android:text="Title"
         android:textColor="@color/black"
-        android:textSize="20dp"
+        android:textSize="17dp"
         app:layout_constraintStart_toEndOf="@+id/imageView5"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -40,7 +41,7 @@
         android:fontFamily="@font/montserrat_medium"
         android:text="Rp"
         android:textColor="@color/black"
-        android:textSize="17dp"
+        android:textSize="14dp"
         app:layout_constraintStart_toStartOf="@+id/textView5"
         app:layout_constraintTop_toBottomOf="@id/textView5" />
 
