--- a/app/src/main/res/layout/activity_search_result.xml
+++ b/app/src/main/res/layout/activity_search_result.xml
@@ -39,10 +39,13 @@
             android:fontFamily="@font/montserrat_regular"
             android:hint="Search"
             android:inputType="text"
+            android:imeOptions="actionSearch"
             android:padding="8dp"
+            android:autofillHints="search"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/imageView25"
             app:layout_constraintTop_toTopOf="parent" />
+
 
         <ImageView
             android:id="@+id/imageView26"
