--- a/app/src/main/res/layout/activity_history_completed.xml
+++ b/app/src/main/res/layout/activity_history_completed.xml
@@ -5,7 +5,6 @@
     android:layout_height="match_parent"
     android:padding="16dp">
 
-
     <TextView
         android:id="@+id/tvOrderTitle"
         android:layout_width="0dp"
@@ -14,6 +13,7 @@
         android:textSize="18sp"
         android:textStyle="bold"
         android:textColor="@color/black"
+        android:fontFamily="@font/montserrat_medium"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -25,6 +25,7 @@
         android:text="Order Status"
         android:textSize="14sp"
         android:textColor="@color/gray"
+        android:fontFamily="@font/montserrat_medium"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@id/tvOrderTitle"
         app:layout_constraintStart_toStartOf="parent"
@@ -37,6 +38,7 @@
         android:text="Address"
         android:textSize="16sp"
         android:textStyle="bold"
+        android:fontFamily="@font/montserrat_medium"
         android:layout_marginTop="16dp"
         app:layout_constraintTop_toBottomOf="@id/tvOrderStatus"
         app:layout_constraintStart_toStartOf="parent" />
@@ -48,6 +50,7 @@
         android:text="Recipient's address will appear here."
         android:textSize="14sp"
         android:textColor="@color/black"
+        android:fontFamily="@font/montserrat_medium"
         app:layout_constraintTop_toBottomOf="@id/tvAddressTitle"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -59,39 +62,20 @@
         android:text="Items"
         android:textSize="16sp"
         android:textStyle="bold"
+        android:fontFamily="@font/montserrat_medium"
         android:layout_marginTop="16dp"
         app:layout_constraintTop_toBottomOf="@id/tvAddressContent"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <!-- Menggunakan RecyclerView untuk memuat ViewHolder -->
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvItems"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@id/tvItemsTitle"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
-
-
-        <ImageView
-            android:id="@+id/imgItem"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:src="@drawable/book_cover"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
-
-        <TextView
-            android:id="@+id/tvItemDescription"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="Item details here"
-            android:textSize="14sp"
-            android:textColor="@color/black"
-            android:layout_marginStart="8dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toEndOf="@id/imgItem"
-            app:layout_constraintEnd_toEndOf="parent" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
         android:id="@+id/tvItemsSelectedLabel"
@@ -100,8 +84,9 @@
         android:text="Items Selected:"
         android:textSize="14sp"
         android:textColor="@color/black"
-        android:layout_marginTop="200dp"
-        app:layout_constraintTop_toBottomOf="@id/tvItemsTitle"
+        android:fontFamily="@font/montserrat_medium"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@id/rvItems"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
@@ -111,6 +96,7 @@
         android:text=""
         android:textSize="14sp"
         android:textColor="@color/black"
+        android:fontFamily="@font/montserrat_medium"
         app:layout_constraintTop_toTopOf="@id/tvItemsSelectedLabel"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -121,6 +107,7 @@
         android:text="Items Total:"
         android:textSize="14sp"
         android:textColor="@color/black"
+        android:fontFamily="@font/montserrat_medium"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@id/tvItemsSelectedLabel"
         app:layout_constraintStart_toStartOf="parent" />
@@ -132,6 +119,7 @@
         android:text=""
         android:textSize="14sp"
         android:textColor="@color/black"
+        android:fontFamily="@font/montserrat_medium"
         app:layout_constraintTop_toTopOf="@id/tvItemsTotalLabel"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -142,6 +130,7 @@
         android:text="Shipping Fee:"
         android:textSize="14sp"
         android:textColor="@color/black"
+        android:fontFamily="@font/montserrat_medium"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@id/tvItemsTotalLabel"
         app:layout_constraintStart_toStartOf="parent" />
@@ -153,6 +142,7 @@
         android:text=""
         android:textSize="14sp"
         android:textColor="@color/black"
+        android:fontFamily="@font/montserrat_medium"
         app:layout_constraintTop_toTopOf="@id/tvShippingFeeLabel"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -164,6 +154,7 @@
         android:textSize="14sp"
         android:textStyle="bold"
         android:textColor="@color/black"
+        android:fontFamily="@font/montserrat_medium"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@id/tvShippingFeeLabel"
         app:layout_constraintStart_toStartOf="parent" />
@@ -176,6 +167,7 @@
         android:textSize="14sp"
         android:textStyle="bold"
         android:textColor="@color/black"
+        android:fontFamily="@font/montserrat_medium"
         app:layout_constraintTop_toTopOf="@id/tvTotalsLabel"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -187,6 +179,7 @@
         android:text="Review:"
         android:textSize="16sp"
         android:textStyle="bold"
+        android:fontFamily="@font/montserrat_medium"
         android:layout_marginTop="16dp"
         app:layout_constraintTop_toBottomOf="@id/tvTotalsLabel"
         app:layout_constraintStart_toStartOf="parent" />
@@ -206,9 +199,9 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:hint="Type your review here..."
-
         android:padding="8dp"
         android:textColor="@color/black"
+        android:fontFamily="@font/montserrat_medium"
         android:textSize="14sp"
         app:layout_constraintTop_toBottomOf="@id/ratingBar"
         app:layout_constraintStart_toStartOf="parent"
@@ -222,8 +215,10 @@
         android:text="Send"
         android:backgroundTint="@color/yellow"
         android:textColor="@color/white"
-        android:layout_marginTop="8dp"
+        android:fontFamily="@font/montserrat_medium"
+        android:layout_marginTop="15dp"
         app:layout_constraintTop_toBottomOf="@id/etReview"
         app:layout_constraintEnd_toEndOf="parent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
