--- a/app/src/main/res/layout/activity_rating_reviews.xml
+++ b/app/src/main/res/layout/activity_rating_reviews.xml
@@ -74,9 +74,12 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
+        android:id="@+id/recyclerView"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/constraintLayout23" />
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
