--- a/app/src/main/res/layout/fragment_rating_review.xml
+++ b/app/src/main/res/layout/fragment_rating_review.xml
@@ -53,7 +53,9 @@
         android:layout_marginTop="16dp"
         android:text="View All"
         android:textAllCaps="false"
+        android:backgroundTint="@color/yellow"
         app:layout_constraintEnd_toEndOf="parent"
+        android:fontFamily="@font/montserrat_medium"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/recyclerView2" />
 
