--- a/app/src/main/res/layout/fragment_rating_review.xml
+++ b/app/src/main/res/layout/fragment_rating_review.xml
@@ -5,13 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/constraintLayout15"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
         <RatingBar
             android:id="@+id/ratingBar6"
             android:layout_width="wrap_content"
@@ -34,9 +27,21 @@
             android:text="0.0/5.0"
             android:textColor="@color/black"
             android:textSize="30sp"
-            app:layout_constraintStart_toEndOf="@+id/ratingBar6"
-            app:layout_constraintTop_toTopOf="@+id/ratingBar6" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            app:layout_constraintStart_toEndOf="@id/ratingBar6"
+            app:layout_constraintTop_toTopOf="@id/ratingBar6" />
+
+        <TextView
+            android:id="@+id/button14"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:text="View All >"
+            android:textAllCaps="false"
+            android:textColor="@color/gray"
+            android:fontFamily="@font/montserrat_medium"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/textView8" />
+
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView2"
@@ -44,19 +49,6 @@
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/constraintLayout15" />
-
-    <Button
-        android:id="@+id/button14"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="View All"
-        android:textAllCaps="false"
-        android:backgroundTint="@color/yellow"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:fontFamily="@font/montserrat_medium"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/recyclerView2" />
+        app:layout_constraintTop_toBottomOf="@+id/ratingBar6" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
